[package]
name = "dwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
futures = "*"
clap = { version = "3.2.17", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
walkdir = "2"
toml = "0.5.2"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"